# federation

./: .gitignore  Cargo.toml  jest.config.base.js  lerna.json  package-lock.json  package.json  test
apollo/: Cargo.toml
apollo/src/: main.rs
core-schema-js/: package.json
core-schema-js/src/: data.ts  err.ts  errors.ts  flow.ts  is.ts  layer.ts  lazy.ts  metadata.ts  proc.ts  schema.ts  source-map.ts  spec.ts  version.ts
docs/: package.json
federation-integration-testsuite-js/: package.json
federation-js/: CHANGELOG.md
federation-js/src/: directives.ts
gateway-js/: CHANGELOG.md  package.json
gateway-js/src/: executeQueryPlan.ts  index.ts  loadSupergraphSdlFromStorage.ts
graphql-parser/: Cargo.toml
graphql-parser-macros/: Cargo.toml
graphql-parser-macros/src/: lib.rs
graphql-parser/src/: common.rs  lib.rs  position.rs
harmonizer/: .gitignore  Cargo.toml  rollup.config.js
harmonizer-bin/.parrot/: metadata.json
harmonizer-bin/fixtures/: schema_1a.graphql  schema_1b.graphql  schema_2a.graphql  schema_3a.graphql  schema_3b.graphql  schema_4a.graphql  schema_4b.graphql  schema_5a.graphql  schema_5b.graphql
harmonizer/js/: do_compose.js
harmonizer/src/: lib.rs
query-planner/: Cargo.toml
query-planner-js/: package.json
query-planner-wasm/: package.json
query-planner/src/: builder.rs  context.rs  groups.rs  helpers.rs  lib.rs
query-planner/tests/: expensive-csdl.graphql  expensive-query.graphql  expensive.json
stargate/fixtures/: acephei.graphql
wasm-bridge/: Cargo.toml  README.md  package.json
wasm-query-planner/: Cargo.toml
(+80 files in other folders)
