[package]
name = "apollo-graphql-parser-macros"
version = "0.0.1"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.33"
quote = "1.0.7"
proc-macro2 = "1.0.18"
